--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,5 +35,17 @@ $rep-chess-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.spacer {
+  flex: 1 1 auto;
+}
