--- a/src/app/packs/pack/pack.component.html
+++ b/src/app/packs/pack/pack.component.html
@@ -1,3 +1,3 @@
 <app-container>
-  <app-exercise-card *ngFor="let exercise of (pack$ | async)?.exercises" [exercise]="exercise"></app-exercise-card>
+  <app-exercise-card *ngFor="let exercise of exercises$ | async" [exercise]="exercise"></app-exercise-card>
 </app-container>
