--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .spacer {
   flex: 1 1 auto;
 }
+
+.single-piece {
+  margin-top: 20px;
+}
