implement core flow of iterating through exercises

--- a/src/app/exercises/exercise/exercise.component.html
+++ b/src/app/exercises/exercise/exercise.component.html
@@ -1,5 +1,6 @@
 <app-container>
   <ngx-chess-board
-    #board
+    #ngxBoard
+    (moveChange)="onMove($any($event))"
   ></ngx-chess-board>
 </app-container>
