--- a/src/app/packs/pack/pack.component.html
+++ b/src/app/packs/pack/pack.component.html
@@ -1,7 +1,1 @@
-<app-container>
-  <app-grid>
-    <app-grid-item *ngFor="let exercise of exercises$ | async">
-      <app-exercise-card [exercise]="exercise"></app-exercise-card>
-    </app-grid-item>
-  </app-grid>
-</app-container>
+<router-outlet></router-outlet>
