--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,5 +51,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .single-piece {
-  margin-top: 20px;
+  transform: scale("90%");
 }
