implment show solution button

--- a/src/app/exercises/exercise/exercise.component.html
+++ b/src/app/exercises/exercise/exercise.component.html
@@ -4,4 +4,6 @@
     [pieceIcons]="pieceIcons"
     (moveChange)="onMove($any($event))"
   ></ngx-chess-board>
+
+  <button mat-raised-button (click)="onShowSolution()">Show Solution</button>
 </app-container>
