--- a/src/app/training-session-exercises/training-session-exercise/training-session-exercise.component.html
+++ b/src/app/training-session-exercises/training-session-exercise/training-session-exercise.component.html
@@ -1,1 +1,1 @@
-<app-exercise (init)="onInitExercise()" (pass)="onPassExercise()" (fail)="onFailExercise()"></app-exercise>
+<app-exercise (init)="onInitExercise()" (pass)="onPassExercise()" (fail)="onFailExercise($event)"></app-exercise>
