--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,5 +51,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .single-piece {
-  transform: scale("90%");
+  scale: 0.8;
 }
