--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,3 +53,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .single-piece {
   scale: 0.8;
 }
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
