implement create packs form

--- a/src/app/packs/create-pack/create-pack.component.html
+++ b/src/app/packs/create-pack/create-pack.component.html
@@ -1,1 +1,3 @@
-<app-packs-form></app-packs-form>
+<app-container>
+  <app-packs-form (submit)="onSubmit($event)"></app-packs-form>
+</app-container>
