--- a/src/app/packs/packs-dashboard/packs-dashboard.component.html
+++ b/src/app/packs/packs-dashboard/packs-dashboard.component.html
@@ -5,7 +5,7 @@
     </app-grid-item>
 
     <app-grid-item>
-      <button mat-raised-button color="primary">
+      <button mat-raised-button color="primary" [routerLink]="['new']">
         Create Pack
       </button>
     </app-grid-item>
