add unlimited mode

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
 <mat-drawer-container>
   <mat-drawer class="nav-bar-margin drawer" mode="over" [opened]="open$ | async">
-    test content
+    <app-drawer-nav></app-drawer-nav>
   </mat-drawer>
 
   <mat-drawer-content>
