--- a/src/app/stats-dashboard/stats-dashboard.component.html
+++ b/src/app/stats-dashboard/stats-dashboard.component.html
@@ -1,11 +1,15 @@
 <app-container *ngIf="sessions$ | async as sessions">
   <app-grid [columns]="1">
     <app-grid-item>
-      <app-quick-stats></app-quick-stats>
+      <app-training-sessions-quick-stats [sessions]="sessions"></app-training-sessions-quick-stats>
     </app-grid-item>
 
     <app-grid-item>
       <app-training-sessions-calendar [sessions]="sessions"></app-training-sessions-calendar>
+    </app-grid-item>
+
+    <app-grid-item>
+      <app-training-sessions-scatter-bar-chart [sessions]="sessions"></app-training-sessions-scatter-bar-chart>
     </app-grid-item>
   </app-grid>
 </app-container>
