--- a/src/app/packs/pack-card/pack-card.component.html
+++ b/src/app/packs/pack-card/pack-card.component.html
@@ -14,8 +14,12 @@
   <mat-divider></mat-divider>
 
   <mat-card-actions>
-    <button mat-button [routerLink]="['/packs', pack.id, 'sessions', 'new']">Train</button>
-
     <app-toggle-pack-subscription [pack]="pack"></app-toggle-pack-subscription>
+
+    <button mat-button [routerLink]="['/packs', pack.id, 'stats']">Stats</button>
+
+    <span class="spacer"></span>
+
+    <button mat-button color="primary" [routerLink]="['/packs', pack.id, 'sessions', 'new']">Train</button>
   </mat-card-actions>
 </mat-card>
