make clock implementation more generic

--- a/src/app/exercises/train-exercises/train-exercises.component.html
+++ b/src/app/exercises/train-exercises/train-exercises.component.html
@@ -1,1 +1,9 @@
-<app-exercise (complete)="onComplete($event)"></app-exercise>
+<button mat-raised-button (click)="onComplete()">End Training</button>
+
+<app-exercises-clock
+  *ngIf="config"
+  [config]="{ leftTime: config.targetTime }"
+  (complete)="onComplete()"
+></app-exercises-clock>
+
+<app-exercise #exerciseComponent (complete)="onCompleteExercise($event)"></app-exercise>
