--- a/src/app/packs/pack-card/pack-card.component.html
+++ b/src/app/packs/pack-card/pack-card.component.html
@@ -4,11 +4,29 @@
   </mat-card-header>
 
   <mat-card-content>
-    <p><small>{{ pack.exercises.length }} Exercises</small></p>
+    <app-grid [columns]="2">
+      <app-grid-item>
+        <p><small>{{ pack.exercises.length }} Exercises</small></p>
 
-    <p *ngIf="pack.data.ratingRange as range"><small>{{ range.low }} - {{ range.high }} Rating</small></p>
+        <p *ngIf="pack.data.ratingRange as range"><small>{{ range.low }} - {{ range.high }} Rating</small></p>
 
-    <p *ngIf="pack.data.themes?.length"><small>{{ pack.data.themes?.join(", ") }}</small></p>
+        <p *ngIf="pack.data.themes?.length"><small>{{ pack.data.themes?.join(", ") }}</small></p>
+      </app-grid-item>
+
+      <app-grid-item>
+        <ng-container *ngIf="completeCycles$ | async as completeCycles">
+          <p *ngIf="completeCycles && completeCycles.length > 0">
+            <small>Completed {{ completeCycles?.length || 0 }} times</small>
+          </p>
+        </ng-container>
+
+        <ng-container *ngIf="ongoingCycle$ | async as ongoingCycle">
+          <p>
+            <small>Current Progress: {{ getCompletedPerc(ongoingCycle) }}</small>
+          </p>
+        </ng-container>
+      </app-grid-item>
+    </app-grid>
   </mat-card-content>
 
   <mat-divider></mat-divider>
