--- a/src/app/stats-dashboard/stats-dashboard.component.html
+++ b/src/app/stats-dashboard/stats-dashboard.component.html
@@ -1,17 +1,13 @@
 <app-container *ngIf="cycles$ | async as cycles">
   <app-grid [columns]="1">
     <app-grid-item>
-      <app-training-sessions-quick-stats [sessions]="cycles"></app-training-sessions-quick-stats>
-    </app-grid-item>
-
-    <app-grid-item>
       <mat-card>
-        <app-training-sessions-successes-per-minute [sessions]="cycles"></app-training-sessions-successes-per-minute>
+        <app-stats-successes-per-minute [sessions]="cycles"></app-stats-successes-per-minute>
       </mat-card>
     </app-grid-item>
 
     <app-grid-item>
-      <app-training-sessions-calendar [sessions]="cycles"></app-training-sessions-calendar>
+      <app-stats-calendar [sessions]="cycles"></app-stats-calendar>
     </app-grid-item>
   </app-grid>
 </app-container>
