--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="nav-bar" color="primary">
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="onToggleSideBar()">
+  <!-- <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="onToggleSideBar()">
     <mat-icon>menu</mat-icon>
-  </button>
+  </button> -->
 
   <span><a routerLink="/">Rep Chess</a></span>
 </mat-toolbar>
