--- a/src/app/ui/modal/modal.component.scss
+++ b/src/app/ui/modal/modal.component.scss
@@ -7,15 +7,21 @@
   left: 0;
   z-index: 999;
 
-  & > div {
-    width: 400px;
+  .modal-content {
+    width: 800px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 2em;
+    padding-top: 3em;
     background: white;
+
+    &.hideClose {
+      padding-top: 20px;
+    }
   }
+
   header {
     font-weight: bold;
   }
@@ -38,4 +44,6 @@
   &:hover {
     color: black;
   }
+
+  margin-bottom: 10px;
 }
