--- a/src/app/exercises/exercise/exercise.component.scss
+++ b/src/app/exercises/exercise/exercise.component.scss
@@ -1,4 +1,12 @@
+.exercise {
+  text-align: center;
+}
+
 .pause-container {
   position: absolute;
   background: black;
+}
+
+.button-wrapper {
+  margin: 10px auto;
 }
