--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -3,5 +3,11 @@
     <mat-icon>menu</mat-icon>
   </button> -->
 
-  <span><a routerLink="/">Rep Chess</a></span>
+  <span>
+    <a routerLink="/">
+      <img class="logo" src="/assets/logo.png" alt="logo">
+
+      Rep Chess
+    </a>
+  </span>
 </mat-toolbar>
