--- a/src/app/stats/stats-averages/stats-averages.component.html
+++ b/src/app/stats/stats-averages/stats-averages.component.html
@@ -1,19 +1,25 @@
-<app-grid [columns]="3">
-  <mat-card *ngIf="stats">
-    <mat-card-content>
-      <h2>{{ stats.sessionCount }} {{ name }}</h2>
-    </mat-card-content>
-  </mat-card>
+<app-grid [columns]="3" [mobileColumns]="1">
+  <app-grid-item>
+    <mat-card *ngIf="stats">
+      <mat-card-content>
+        <h2>{{ stats.sessionCount }} {{ name }}</h2>
+      </mat-card-content>
+    </mat-card>
+  </app-grid-item>
 
-  <mat-card *ngIf="stats">
-    <mat-card-content>
-      <h2>Average Time: {{ stats.averageTime | formatTime }}</h2>
-    </mat-card-content>
-  </mat-card>
+  <app-grid-item>
+    <mat-card *ngIf="stats">
+      <mat-card-content>
+        <h2>Average Time: {{ stats.averageTime | formatTime }}</h2>
+      </mat-card-content>
+    </mat-card>
+  </app-grid-item>
 
-  <mat-card *ngIf="stats">
-    <mat-card-content>
-      <h2>Accuracy: {{ stats.averageAccuracy }}</h2>
-    </mat-card-content>
-  </mat-card>
+  <app-grid-item>
+    <mat-card *ngIf="stats">
+      <mat-card-content>
+        <h2>Accuracy: {{ stats.averageAccuracy }}</h2>
+      </mat-card-content>
+    </mat-card>
+  </app-grid-item>
 </app-grid>
