--- a/src/app/stats/stats-results/stats-results.component.html
+++ b/src/app/stats/stats-results/stats-results.component.html
@@ -1,4 +1,4 @@
-<app-grid *ngIf="session" [columns]="columns">
+<app-grid *ngIf="session" [columns]="columns" [mobileColumns]="1">
   <app-grid-item>
     <mat-card>
       <mat-card-content>
